--- a/add.html
+++ b/add.html
@@ -1,8 +1,7 @@
 <html>
-    <head>
-        <title>barnching</title>
-     </head>
      <body>
         <p>this is a main</p>
+        <p>this is a master</p>
+        <P>ths is a third</P>
      </body>
 </html>
